# erp-bridges

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
data/: fake_buy_orders.xml
src/core/: settings.py  urls.py  views.py
src/core/ingestion/: base.py
src/core/reports/: base.py  registry.py
src/core/static/core/js/: tailwind.config.js
src/core/templates/core/: base.html  login.html  logout.html  test.html
src/core/templates/core/partials/: _pagination_controls.html  _sidebar.html  sidebar.html
src/core/templatetags/: cpf_format.py  phone_format.py
src/core/utils/: cleaners.py  dataframe_utils.py  parsers.py  workbook_utils.py
src/source_m/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
src/source_m/ingestion/: dispatcher.py  loader.py  pipeline.py
src/source_m/management/commands/: import_orders_xml.py
src/source_m/migrations/: 0001_initial.py  0002_rename_orderdetail_buyorderdetail.py
src/source_m/reports/: customers_report.py  orders_report.py  settings.py
src/source_m/repository/: buy_order_repository.py  customer_group_repository.py  customer_repository.py  payment_type_repository.py  status_repository.py
src/source_m/services/: buy_order_service.py  customer_group_service.py  customer_service.py
src/source_m/static/source_m/js/: customers-list.js
src/source_m/templates/source_m/: customers-list.html
src/source_m/templates/source_m/partials/: _customers-table.html  customers-table.html
src/source_m/tests/: test_orders_pipeline.py
static/src/css/: output.css
