[project]
name = "erp-bridges"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.1",
    "pandas>=2.3.0",
    "pytest>=8.4.1",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.ruff]
extend-exclude = ['migrations', 'settings.py', 'manage.py']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'uv run src/manage.py runserver'
startapp = 'uv run manage.py startapp'
migrate = 'uv run src/manage.py migrate'
makemigrations = 'uv run src/manage.py makemigrations'
collectstatic = 'uv run src/manage.py collectstatic --noinput'
superuser = 'uv run src/manage.py createsuperuser'

[tool.pytest.ini_options]
pythonpath = 'src'
addopts = '-p no:warnings'
